Prepare backend and extension for Vercel deployment: add serverless handler, update API logging, and production configs

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,12 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "blazr-icon.svg"
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "side_panel": {
     "default_path": "sidepanel.html"
@@ -26,8 +31,10 @@
     "service_worker": "background.js"
   },
   "icons": {
-    "48": "blazr-icon.svg",
-    "128": "blazr-icon.svg"
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "content_scripts": [
     {
